# n2k-gen

./: README.md
n2k/: Cargo.toml  README.md
n2k-codegen/: Cargo.toml  README.md  pgns.xml
n2k-codegen/includes/: Cargo.toml  types.rs
n2k-codegen/src/: canboatxml.rs  keywords.rs  lib.rs
n2k-test/: Cargo.toml  README.md
n2k-test/src/: main.rs
n2k/src/: bus.rs  fast_packet.rs  frame.rs  id.rs  lib.rs  message.rs  name.rs  product.rs
